[gd_scene load_steps=3 format=3 uid="uid://d4dqulc66ytm4"]

[ext_resource type="Script" path="res://usernamePicker.gd" id="1_rscvl"]

[sub_resource type="LabelSettings" id="LabelSettings_16ysa"]

[node name="UsernamePicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rscvl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -52.0
offset_right = 264.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ErrorText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Please pick a username for the leaderboards!"
label_settings = SubResource("LabelSettings_16ysa")
horizontal_alignment = 1

[node name="UsernameFeild" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "must be unique, cannot be changed later"

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
